--- a/WebProject3/script/css/stylesheet.css
+++ b/WebProject3/script/css/stylesheet.css
@@ -6,15 +6,18 @@
 
 body {
   font-family: 'Roboto', sans-serif;
-  max-width: 960px;
-  margin: 0 auto;
+  margin: 0;
 }
 
 #searchForm {
-  margin-top: 2rem;
+  display: flex;
+  max-width: 960px;
+  margin: 0 auto;
+  flex: 1 1 100%;
+  padding: 1rem;
 }
 
-#searchForm input, #searchForm button {
+#searchForm input, #searchForm button, #updatedoc_form button {
   font-family: 'Roboto', sans-serif;
   height: 2.25rem;
   margin: 0;
@@ -26,28 +29,27 @@ body {
   transition: all .15s ease;
 }
 
-#searchForm button {
-  padding: .5rem 1rem;
+#searchForm button, #updatedoc_form button {
+  padding: .5rem 2rem;
   margin-left: .25rem;
   font-size: 16px;
-  width: 15%;
   border: 1px solid #6DBCDB;
   color: #fff;
   background-color: #6DBCDB;
   cursor: pointer;
 }
 
-#searchForm button:hover {
+#searchForm button:hover, #updatedoc_form button:hover {
   color: #6DBCDB;
   background-color: #fff;
 }
 
-#searchForm button:active {
+#searchForm button:active, #updatedoc_form button:active {
   background-color: #CBEAFA;
 }
 
 #searchField {
-  width: calc(85% - .5rem);
+  flex-grow: 1;
   font-size: 18px;
   padding: .5rem;
   border: 1px solid #D7DADB;
@@ -57,17 +59,277 @@ body {
   border: 1px solid #6DBCDB;
 }
 
-.results p {
-  font-size: 18px;
-  font-weight: 500;
-  padding-top: 2rem;
-  margin-bottom: .5rem;
-  margin-top: 2rem;
-  color: #4DA7DB;
+.home_nav, #admin_dashboard {
+  text-align: left;
+  text-decoration: none;
+  text-transform: lowercase;
+  color: #2C3E50;
+  font-weight: 400;
+  padding: .25rem 1rem;
+  border-radius: .25rem;
+  font-size: 16px;
+  letter-spacing: .5px;
+  transition: all .15s ease;
+  margin: 0 .5rem;
 }
 
-.results p:not(:first-child) {
+.home_nav:hover, #admin_dashboard:hover {
+  color: #6DBCDB;
+  background-color: #fff;
+}
+
+.active {
+  color: #2C3E50;
+  background-color: #CBEAFA;
+}
+
+/* old login start
+
+.login_container {
+  padding: 1rem;
+  display: none; // flex
+  justify-content: flex-end;
+}
+
+#adminForm {
+  display: block;
+  width: 15rem;
+}
+
+#adminForm input, #adminForm button {
+  display: inline-block;
+  font-family: 'Roboto', sans-serif;
+  padding: .25rem .5rem;
+  width: calc(50% - .125rem);
+  font-size: 12px;
+  font-weight: 300;
+  text-rendering: geometricPrecision;
+  border-radius: .25rem;
+  outline: none;
+  border: 1px solid #D7DADB;
+  transition: all .15s ease;
+  margin: .125rem 0;
+}
+
+#adminForm button {
+  // padding: .25rem 1.25rem;
+  width: 100%;
+  font-size: 12px;
+  border: 1px solid #6DBCDB;
+  color: #fff;
+  background-color: #6DBCDB;
+  cursor: pointer;
+}
+
+old login end */
+
+.login_modal {
+  padding: .5rem 1rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-bottom: 2rem;
+  background-color: #6DBCDB;
+}
+
+.login_modal #input_toggle {
+  display: inline-block;
+  font-family: 'Roboto', sans-serif;
+  padding: .5rem 1.5rem;
+  font-size: 12px;
+  font-weight: 300;
+  text-rendering: geometricPrecision;
+  border-radius: .25rem;
+  outline: none;
+  border: none;
+  transition: all .15s ease;
+  margin: .125rem 0;
+  color: #2C3E50;
+  background-color: #CBEAFA;
+  cursor: pointer;
+  margin-left: auto;
+}
+
+.login_modal #input_toggle:hover {
+  color: #2C3E50 !important;
+  background-color: #FF7D60 !important;
+  box-shadow: inset 0 0 0 1px #2C3E50;
+}
+
+#admin_dashboard {
+  text-decoration: none;
+}
+
+.login_modal p {
+  margin: 0;
+  font-weight: 300;
+}
+
+.modal_container {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0,0,0,.75);
+  z-index: 1;
+}
+
+.modal_container #admin_form {
+  display: flex;
+  flex-wrap: wrap;
+  position: absolute;
+  width: 50%;
+  min-width: 15rem;
+  max-width: 25rem;
+  height: 15rem;
+  top: 25%; bottom: 25%; left: 0; right: 0;
+  background-color: #fff; /* 6DBCDB */
+  border-radius: .25rem;
+  margin: 2rem auto;
+  align-items: center;
+  align-content: center;
+  text-align: center;
+  z-index: 2;
+}
+
+#admin_form p {
+  text-align: center;
+  margin: 0 auto;
+  margin-bottom: 1rem;
+  display: block;
+  text-transform: uppercase;
+  font-weight: 400;
+  letter-spacing: .2px;
+  color: #6DBCDB;
+  font-size: 18px;
+}
+
+#admin_form input, #admin_form button {
+  display: block;
+  font-family: 'Roboto', sans-serif;
+  padding: .25rem .5rem;
+  font-size: 14px;
+  width: 100%;
+  font-weight: 300;
+  text-rendering: geometricPrecision;
+  border-radius: .25rem;
+  outline: none;
+  border: 1px solid #D7DADB;
+  transition: all .15s ease;
+  margin: .25rem 2rem;
+}
+
+#admin_form button {
+  padding: .5rem;
+  font-size: 16px;
+  font-weight: 400;
+  width: 100%;
+  margin-top: .5rem;
+  border-radius: .25rem;
+  outline: none;
+  border: none;
+  background-color: #6DBCDB;
+  color: #fff;
+  cursor: pointer;
+}
+
+.results, .overview {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+  flex-wrap: wrap;
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
+
+.found_results {
+  flex: 0 0 100%;
+  font-weight: 400;
+  margin-bottom: 2rem;
+}
+
+
+.items {
+
+  flex: 1;
+  order: 1;
+  padding-left: .5rem;
+}
+
+
+.keyword_toggle {
+
+  margin: 0;
+  width: 20%;
+  order: 0;
+  flex: 0 20%;
+  padding-right: .5rem;
+  font-size: 14px;
+  font-weight: 300;
+}
+
+.keyword_toggle label {
+  padding-left: .25rem;
+}
+
+.keyword_toggle label, .keyword_toggle input {
+  margin: .5rem 0;
+}
+
+.results a {
+  display: block;
+  font-size: 18px;
+  font-weight: 500;
+  padding-top: 1.5rem;
+  margin-bottom: .5rem;
+  color: #4DA7DB;
+  text-decoration: none;
+
+}
+
+.result_item {
+  position: relative;
+  margin-bottom: 4rem;
   border-top: 1px solid #D7DADB;
+}
+
+/*
+.result_item ~ .result_item:not(:first-of-type) {
+  border-top: 1px solid #D7DADB;
+}
+
+result_item:first-of-type {
+  margin-top: 2rem;
+}
+*/
+
+.results .subtext p {
+  display: inline-block;
+}
+
+.results .date_modified, .results .keyword_category {
+  font-weight: 300;
+  color: darkgray;
+  letter-spacing: .1px;
+}
+
+.keyword_category {
+  // padding-right: 2rem;
+  padding: 0;
+  margin: .5rem 0;
+  font-size: 16px;
+}
+
+.date_modified {
+  // padding-left: 2rem;
+  margin-top: .25rem;
+  font-size: 14px;
 }
 
 .results em {
@@ -78,6 +340,7 @@ body {
 .results ul, .results li {
   list-style-type: none;
   margin: 0;
+  text-indent: -16px;
 }
 
 .results ul {
@@ -86,7 +349,8 @@ body {
 
 .results ul > li:before {
   content: "- ";
-  margin-right: .25rem;
+  margin-right: .5rem;
+  text-indent: 16px;
   color: #4DA7DB;
 }
 
@@ -94,4 +358,111 @@ body {
   padding: .5rem 0;
   font-weight: 300;
   color: #2C3E50;
+}
+
+.overview h1 {
+  font-weight: 400;
+  text-align: center;
+}
+
+#updatedoc_form {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  flex: 1 1 100%;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+#updatedoc_form .container {
+  position: relative;
+  display: flex;
+  flex: 1 1 100%;
+  flex-wrap: wrap;
+  align-items: center;
+  border-top: 1px solid #D7DADB;
+  margin-top: 1rem;
+  padding-top: 1rem;
+}
+
+#updatedoc_form .hidden {
+  display: none;
+}
+
+#updatedoc_form label {
+  padding-right: 1rem;
+  flex: 1 1 20%;
+  width: 20%;
+}
+
+#updatedoc_form .container label {
+  font-weight: 300;
+}
+
+#updatedoc_form select, #updatedoc_form input, #updatedoc_form option {
+  font-family: 'Roboto', sans-serif;
+  flex: 0 0 80%;
+  width: 80%;
+  font-size: 16px;
+  font-weight: 300;
+  padding: .5rem;
+  border: 1px solid #D7DADB;
+  height: 2rem;
+  margin: 1rem 0;
+  text-rendering: geometricPrecision;
+  border-radius: .25rem;
+  outline: none;
+  transition: all .15s ease;
+}
+
+#updatedoc_form select:focus, #updatedoc_form input:focus {
+  border: 1px solid #6DBCDB;
+}
+
+#updatedoc_form button {
+  margin-top: 1rem;
+  margin-left: auto;
+}
+
+#updatedoc_form a {
+  display: block;
+  margin: 0;
+  margin-bottom: 1rem;
+  text-decoration: none;
+  color: #4DA7DB;
+  font-weight: 300;
+  font-size: 14px;
+  max-width: calc(960px*(80/100) - 1.75rem);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+#updatedoc_form .response {
+  display: none;
+  text-align: right;
+  color: #fff;
+  border-bottom-right-radius: .25rem;
+  border-bottom-left-radius: .25rem;
+  margin-top: -.25rem;
+}
+
+.success {
+  background-color: #78E571 !important;
+}
+
+.fail {
+  background-color: #FF623B !important;
+}
+
+#updatedoc_form .response i {
+  font-size: 36px;
+  padding: .5rem 4.7rem;
+  vertical-align: middle;
+  margin-top: .25rem;
+}
+
+
+#updatedoc_form .input_error {
+  border: 1px solid #FF623B;
 }
